Whatsapp & Facebook Field

--- a/src/fxgui.fxml
+++ b/src/fxgui.fxml
@@ -101,6 +101,10 @@
                               <ComboBox fx:id="combo_courseStTr_reg" disable="true" layoutX="26.0" layoutY="295.0" prefWidth="150.0" promptText="Choose Course" />
                               <TextField fx:id="fld_email_reg" layoutX="454.0" layoutY="24.0" />
                               <Label layoutX="408.0" layoutY="28.0" text="Email" />
+                              <Label layoutX="375.0" layoutY="68.0" text="WhatsApp #" />
+                              <TextField fx:id="fld_whatsapp_reg" layoutX="454.0" layoutY="64.0" />
+                              <TextField fx:id="fld_facebook_reg" layoutX="454.0" layoutY="104.0" />
+                              <Label layoutX="327.0" layoutY="108.0" text="Facebook Link Profile" />
                            </children>
                         </Pane>
                      </children>
