Developping fx GUI.

--- a/fxgui.fxml
+++ b/fxgui.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.*?>
 <?import java.lang.*?>
@@ -44,23 +46,21 @@
                       </ScrollPane>
                       <ScrollPane layoutX="23.0" layoutY="60.0" prefHeight="187.0" prefWidth="406.0">
                            <content>
-                              <TextFlow prefHeight="186.0" prefWidth="393.0" />
+                              <TextFlow prefHeight="186.0" prefWidth="403.0" />
                            </content>
                       </ScrollPane>
                       <TextField layoutX="500.0" layoutY="257.0" prefWidth="88.0" />
                       <Label layoutX="440.0" layoutY="261.0" text="Username" />
                       <TextField layoutX="94.0" layoutY="257.0" prefHeight="24.0" prefWidth="334.0" />
                       <Label layoutX="23.0" layoutY="260.0" text="Message" />
-                      <Label layoutX="20.0" layoutY="297.0" text="Server log" />
-                      <Label layoutX="320.0" layoutY="296.0" text="Local log" />
-                      <TextField layoutX="92.0" layoutY="292.0" prefWidth="200.0" />
-                      <TextField layoutX="389.0" layoutY="292.0" prefWidth="200.0" />
                       <Label layoutX="467.0" layoutY="33.0" text="Online Users" />
                       <Label layoutX="25.0" layoutY="33.0" text="Chat log" />
                     <Button layoutX="259.0" layoutY="347.0" mnemonicParsing="false" text="Disconnect" />
                     <Button layoutX="569.0" layoutY="348.0" mnemonicParsing="false" text="Exit" />
                         <Button layoutX="21.0" layoutY="347.0" mnemonicParsing="false" text="Send" />
                         <ProgressBar layoutX="354.0" layoutY="349.0" prefHeight="18.0" prefWidth="200.0" progress="0.0" />
+                        <Label layoutX="440.0" layoutY="296.0" text="Password" />
+                        <PasswordField layoutX="501.0" layoutY="292.0" prefHeight="25.0" prefWidth="87.0" />
                      </children>
                   </AnchorPane>
             </content>
