--- a/src/fxgui.fxml
+++ b/src/fxgui.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxgui.FXController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxgui.FXController">
   <children>
     <MenuBar layoutY="-4.0" prefHeight="24.0" prefWidth="628.0">
       <menus>
@@ -35,10 +35,8 @@
         <tabs>
           <Tab text="All Users">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="502.0" prefWidth="628.0">
+              <AnchorPane prefHeight="392.0" prefWidth="623.0">
                      <children>
-                    <Button layoutX="159.0" layoutY="347.0" mnemonicParsing="false" text="Select Server" />
-                    <Button fx:id="btn_Connect" alignment="TOP_CENTER" layoutX="80.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleConnectButton" text="Connect" />
                       <ScrollPane layoutX="463.0" layoutY="60.0" prefHeight="187.0" prefWidth="122.0">
                         <content>
                           <ListView prefHeight="187.0" prefWidth="122.0" />
@@ -49,23 +47,27 @@
                               <TextArea prefHeight="186.0" prefWidth="394.0" />
                            </content>
                       </ScrollPane>
-                      <TextField layoutX="500.0" layoutY="257.0" prefWidth="88.0" />
+                      <TextField fx:id="fld_userName" layoutX="500.0" layoutY="257.0" prefWidth="88.0" />
                       <Label layoutX="440.0" layoutY="261.0" text="Username" />
                       <TextField layoutX="94.0" layoutY="257.0" prefHeight="24.0" prefWidth="334.0" />
                       <Label layoutX="23.0" layoutY="260.0" text="Message" />
                       <Label layoutX="467.0" layoutY="33.0" text="Online Users" />
                       <Label layoutX="25.0" layoutY="33.0" text="Chat log" />
-                    <Button layoutX="259.0" layoutY="347.0" mnemonicParsing="false" text="Disconnect" />
-                    <Button layoutX="569.0" layoutY="348.0" mnemonicParsing="false" text="Exit" />
-                        <Button fx:id="btn_Send" layoutX="21.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleSendButton" text="Send" />
-                        <ProgressBar layoutX="354.0" layoutY="349.0" prefHeight="18.0" prefWidth="200.0" progress="0.0" />
                         <Label layoutX="440.0" layoutY="296.0" text="Password" />
                         <PasswordField layoutX="501.0" layoutY="292.0" prefHeight="25.0" prefWidth="87.0" />
+                        <PasswordField layoutX="501.0" layoutY="328.0" prefHeight="25.0" prefWidth="87.0" />
+                        <Label layoutX="411.0" layoutY="332.0" text="Server Address" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
         </tabs>
       </TabPane>
+  <Button layoutX="143.0" layoutY="444.0" mnemonicParsing="false" text="Server Options" />
+  <Button fx:id="btn_Connect" alignment="TOP_CENTER" layoutX="74.0" layoutY="444.0" mnemonicParsing="false" onAction="#handleConnectButton" text="Connect" />
+  <Button layoutX="248.0" layoutY="445.0" mnemonicParsing="false" text="Disconnect" />
+  <Button layoutX="571.0" layoutY="446.0" mnemonicParsing="false" text="Exit" />
+      <Button fx:id="btn_Send" layoutX="23.0" layoutY="445.0" mnemonicParsing="false" onAction="#handleSendButton" text="Send" />
+      <ProgressBar layoutX="356.0" layoutY="447.0" prefHeight="18.0" prefWidth="200.0" progress="0.0" />
   </children>
 </AnchorPane>
